# fair-mast-ingestion

./: .gitattributes  .gitignore  INGESTION.md  README.md  aravinda_shots.txt  create_netcdf.ipynb  create_netcdf_pickup.ipynb  pickup_coils.nc  pyproject.toml  pytest.ini  requirements.txt
campaign_shots/: mast_u.csv  mastu.csv  mastu_tiny.csv  tiny_campaign.csv
configs/: level1.csd3.yml  level1.yml  level2.csd3.yml  level2.yml
geometry/: create_netcdf_fluxloops.py  create_netcdf_limiter.py  create_netcdf_mirnovs.py  create_netcdf_omaha.py  create_netcdf_passive.py  create_netcdf_pickup.py  create_netcdf_saddle.py  create_netcdf_xraycams.py
geometry_files/: ccbv.parquet  ccmt.parquet  ccmv.parquet  current_detectors_M1.parquet  flux_detectors_M1.parquet  flux_detectors_M4.parquet  flux_loop_detectors_M4.parquet  magnetic_detectors_M4.parquet  omaha_22108_23945.parquet  omaha_23945_24719.parquet  omaha_post_24719.parquet  omaha_pre_22108.parquet  pfcoils_M1.parquet  pfcoils_M4.parquet  ssx_inner_vertical_cam.parquet  ssx_lower_horizontal_cam.parquet  ssx_outer_vertical_cam.parquet  ssx_tangential_cam.parquet  ssx_third_horizontal_cam.parquet  ssx_upper_horizontal_cam.parquet  toroidal_flux.parquet  xma_obv_obr.parquet  xmb_sad.parquet  xmc_omv.parquet
geometry_notebooks/: CCBV.ipynb  CCMT.ipynb  CCMV.ipynb  OMAHA.ipynb  amc_amm_splitting.ipynb  gitlab_geometry_data.ipynb  ssx_spec.ipynb  toroidal_flux.ipynb  xma_obv_obr.ipynb  xmb_sad.ipynb  xmc_omv.ipynb
jobs/: consolidate_job.freia.qsub.sh  consolidate_job.slurm.sh  cpf_metadata.freia.qsub  freia_write_cpf.qsub  (+23 more)
(+290 files in other folders)
