[project]
name = "fair-mast-ingestor"
version = "2024.0.0"
dynamic = ["dependencies"]
requires-python = ">=3.9"
authors = [
]
maintainers = [
  {name = "Samuel Jackson", email = "samuel.jackson@ukaea.uk"}
]
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[tool.setuptools]
packages = ["src"]
py-modules = ["__init__"] #

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-env",
    "ruff"
]

mpi = [
  "mpi4py",
  "dask_mpi"
]

[project.urls]

[tool.ruff]
exclude = [".venv", "notebooks"]

[tool.pytest_env]
UDA_HOST = "uda2.mast.l"
UDA_META_PLUGINNAME = "MASTU_DB"
UDA_METANEW_PLUGINNAME = "MAST_DB"